changed to gridicons and alignment fixes
changed icons into text

added is-scary to delete button

removed is-primary from delete button

aligning to style guide

added textonly true

identation problems

identation updates

formatting

formatted

title removed

--- a/assets/stylesheets/sections/_menus.scss
+++ b/assets/stylesheets/sections/_menus.scss
@@ -923,7 +923,6 @@
 
 	.button {
 		margin-left: 0.5em;
-		line-height: 1.3em;
 
 		&.noticon {
 			// Noticon override
